# dxf_extractor

./: LICENSE  README.md  config.yaml  dxf_to_pdf.py  env.example  pyproject.toml  rules.default.json  sample_dxf.dxf
docs/: extensibility_and_issues.md  extraction_details.md  llm_usage.md  output_format.md  processing_flow.md  refactoring_result.md  structurization_rules.md  summary.md
skills/sync-docs/: SKILL.md
src/dxf_extractor/: __init__.py  cli.py  cli_support.py  config.py  orchestrator.py  pipeline.py  structurize_pipeline.py  utils.py
src/dxf_extractor/analyzers/: __init__.py  block_detector.py  duplicate_resolver.py  frame_detector.py  metadata_extractor.py  scale_estimator.py  tolerance_parser.py
src/dxf_extractor/associators/: __init__.py  base.py  llm_helper.py  registry.py  rule10_part_number.py  rule1_dimension_shape.py  rule2_tdim_classifier.py  rule3_table_structure.py  rule4_cross_section.py  rule5_note_shape.py  rule6_view_projection.py  rule7_hatch.py  rule8_title_block.py  rule9_revision.py  rule_loader.py
src/dxf_extractor/llm/: __init__.py  labeler.py  prompts.py  provider.py
src/dxf_extractor/models/: __init__.py  association.py  block.py  dimension.py  drawing.py  layer.py  note.py  shape.py  table.py  tolerance.py
src/dxf_extractor/parsers/: __init__.py  dimension_extractor.py  dxf_reader.py  entity_source.py  layer_extractor.py  shape_extractor.py  table_extractor.py  text_extractor.py
src/dxf_extractor/serializers/: __init__.py  json_serializer.py  md_serializer.py
