[project]
name = "dxf-extractor"
version = "0.1.0"
description = "DXFファイルから構造化情報を抽出するCLIツール"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "click>=8.0",
    "ezdxf>=1.3",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "pillow>=12.2.0",
    "pydantic>=2.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
]

[project.scripts]
dxf-extract = "dxf_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dxf_extractor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
